@@ -1,3 +1,7 @@
+compiler: kamma die logik für multiple-values umdrehen?
+-> nicht wegputzen wenn mans nicht braucht
+   -> sondern values wird nur belegt wenn ein flag true ist, und nur multiple-value-bind/ multiple-value-call (/ noch was?) setzen das auf true (und nach der values form gleich wieder auf false)
+
 zyklen erkennen: https://coredumped.dev/2024/02/23/cycles-all-way-down/
 -> list-length hat Floyd’s cycle detection, gibt aber noch Brent’s algorithm für zyklen in trees siehe https://en.wikipedia.org/wiki/Cycle_detection#Brent's_algorithm
 
