@@ -1,6 +1,7 @@
 
 Changes in JMurmel-1.4.6 relative to JMurmel-1.4.5
 
+ * changed/ fixed cond clauses w/o body to return the primary result of the test-form (was: nil)
  * changed printing of conditions: (write cnd nil) will only print the message, (write cnd t)
    will also print the location info
  * changed mlib: renamed the functions last0, last1, lastn to m%last0, m%last1, m%lastn
